# SCPA

./: .gitignore  CMakeLists.txt  README.md  downloadMatrix.sh
include/: BlockGridInfo.h  COOMatrix.h  CSRMatrix.h  ELLMatrix.h  Histogram.h  MTXParser.h  SpMV.h  SpMVKernel.cuh  SpMVResult.h  SwapMap.h  Vector.h  cudaUtils.cuh  cudaUtils.h  util.h
lib/mmio/include/: mmio.h
lib/mmio/src/: mmio.c
src/: COOMatrix.cpp  CSRMatrix.cpp  ELLMatrix.cpp  SpMV_CSR.cu  Vector.cpp  analyzeMatrix.c  csrMatrixMain.c  csrMatrixMain.cpp  ellmatrixMain.c  ellmatrixMain.cpp  main.cpp  readCOOMatrix.c  readCSRMatrix.c  readCSRMatrix.cpp  readELLMatrix.c  readELLMatrix.cpp  spmvCOO.c  spmvCSR.c  spmvCSRCuda.c  spmvCSROpenMP.c  spmvCSR_OpenMP.c  spmvELL.c  spmvELLCuda.c  spmvELLOpenMP.c  spmvELL_OpenMP.c  spmvMain.c  spmvTest.c  testspmvSplit.c  testspmvSplitELL.c
src/sparsematrix/: COOMatrix.c  COOMatrix.cpp  COOMatrix.cu  CSRMatrix.c  CSRMatrix.cpp  CSRMatrix.cu  ELLMatrix.c  ELLMatrix.cpp  ELLMatrix.cu  MTXParser.c  Vector.c  Vector.cpp  Vector.cu
src/spmv/: SpMV.c  SpMVResult.c  SpMVResult.cpp  SpMV_COO.cu  SpMV_COO_openmp.c  SpMV_CSR.cu  SpMV_CSR_openmp.c  SpMV_ELL.cu  SpMV_ELLHYB.c  SpMV_ELLHYB.cu  SpMV_ELL_openmp.c  SpMV_OMP.c
src/util/: BlockGridInfo.c  Histogram.c  Histogram.cpp  MTXParser.c  SwapMap.cpp  cudaUtils.cu  util.c
